	  TODO: We need to fix the output detection properly, after all. Otherwise, if the plugin produces an error, no re-run link is shown.
- Assorted minor fixes and improvments to several plugins
- Fix deadlock while handling some Tcl events		TODO: much more (stress-)testing, backport? (r2649)
- Plugin dialogs close automatically after submitting (by default)
- Fetching object structure is much faster for very large data.frames
- Fix crash when loading certain packages on Windows
- Fix some potential path issues on Windows
- "Analysis" menu was restructured, slightly
- Debug output (previously sent to stderr) is now written to a temporary file
- On plugin help pages, display a link to invoke the plugin
- Tolerate missing libraries in testing framework
- Double-clicking an item in the workspace browser now opens an object viewer, or (if possible) editor
- Safeguard against removal of essential packages via the GUI
- Add context menu action to unload packages in the workspace browser window
- Add shortcut to the load / unload packages dialog also in the workspace menu and the workspace browser context menu
- Make toolbar buttons configurable
- Fixed: Console window would sometimes remain in partially active state after piping commands

--- Version 0.5.1 - Aug-04-2009
- Support compilation on Windows
- Add framework for automated plugin testing, and some first plugin tests
- New command line option "--evaluate <Rcode>" mostly for the purpose of automated testing
- Remove support for R 2.6.x and earlier
- Add basic checks for a correct installation of the RKWard resource files
- Remove "What to expect" dialog at startup
- Make keyboard shorcuts configurable
- Add option to add only single line commands from script editor to the console history
- Add action to change working directory to that of the current script file
- Fixed: No warning was shown, when an open script file was changed on disk, externally