@@ -1,1 +1,1 @@
-".rk.app.version" <- "0.5.2-windows_pre1"
+".rk.app.version" <- "0.5.2-svn1"
