@@ -528,6 +528,15 @@ int RThread::initialize () {
 	}
 	delete [] standardliblocs;
 
+// start help server / determined help base url
+	QString *help_base_url = getCommandAsStringVector (".rk.getHelpBaseUrl ()\n", &c, &error);
+	if (error) status |= OtherFail;
+	else {
+		RK_ASSERT (c == 1);
+		RKSettingsModuleR::help_base_url = help_base_url[0];
+	}
+	delete [] help_base_url;
+
 // apply user configurable run time options
 	QStringList commands = RKSettingsModuleR::makeRRunTimeOptionCommands () + RKSettingsModuleRPackages::makeRRunTimeOptionCommands ();
 	for (QStringList::const_iterator it = commands.begin (); it != commands.end (); ++it) {
