@@ -1,1 +1,1 @@
-0.5.2-windows_pre1
+0.5.2-svn1
